--- a/notebooks/01-etg-Initial-data-wrangling.ipynb
+++ b/notebooks/01-etg-Initial-data-wrangling.ipynb
@@ -24680,8 +24680,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "4f127dcf-6f5c-4fa0-a4c3-718b27839281",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('test')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "36d6973f-5691-4108-b3b3-15474dd36c80",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -24689,9 +24707,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:base] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-base-py"
   },
   "language_info": {
    "codemirror_mode": {
