--- a/notebooks/02-etg-initial-exploratory-data-analysis.ipynb
+++ b/notebooks/02-etg-initial-exploratory-data-analysis.ipynb
@@ -1,20 +1,14 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "9522c453-952c-4910-8d4d-6ce20ff766be",
-   "metadata": {},
-   "source": [
-    "The purpose of this exploration is to understand what features contribute to Churn, ie customers who choose not to continue their contract with Telco.  The null hypothesis is none of the features contribute to customer churn.  I wish to find statistically significant correlations between the features in order to reject the null hypothesis.  My strategy was to start very broad; first with a univeriate analysis of the feature 'Churn.'  I then created several bi-variate plots to understand how 'Churn' related to (first) the other categorical features of the dataset and then to the continuous variables of the dataset.  I found the correlation coefficient for Churn and categorical variables with the CramersV function.  I found the Pearson correlation coefficient for Churn and the continuous variables.  From these correlation coefficients I created correlation matrices.  Lastly, I used a Random Forest to glean important features for modeling."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "54676c9c-ba5e-46c4-a9c1-b93151c472ef",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Import and load...\n",
+    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import os\n",
@@ -5845,13 +5839,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6ac7c486-769f-470b-b852-82e43e725d95",
+   "cell_type": "markdown",
+   "id": "c68c17ec-6288-4c44-aae5-8f2cfa009b39",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "Conclusion:\n"
+    "Conclusion:\n",
+    "The purpose of this exploration is to understand what features contribute to \"Churn,\" ie customers who choose not to continue their contract with Telco. The null hypothesis is none of the features contribute to customer churn. I wish to find statistically significant correlations between the features in order to reject the null hypothesis. My strategy was to start very broad; first with a univeriate analysis of the feature \"Churn.\"  I noticed that Telco experienced a churn of 26.6 percent. I then explored which variables cause the ratio of yes/no to significantly change.  I achieved this through the creation of several bi-variate plots to understand how \"Churn\" related to (first) the other categorical features of the dataset and then to the continuous variables of the dataset. I found the correlation coefficient for Churn and categorical variables with the CramersV function.  From the above graphs generated, one could see how the variables \"Contract,\" \"Online Security,\" \"Tenure,\" \"Tech Support,\" and \"Internet Service\" altered the ratios of \"Churn\" more when compared to other variables.  Some variables like 'Gender' had no correlation. Their CramersV Coefficient confirmed their correlation statistically.  The correlation heatmap confirmed correlation visually.\n",
+    "\n",
+    "I found the Pearson correlation coefficient for Churn and the continuous variables, \"Monthly Charges\" and \"Total Charges\". From the graphs and statitistics, one can see Monthly Charges and Total Charges are correlated.  Also, there is a positive correlation between Churn and Monthly Charges. A Negative Correlation between Churn and Total Charges.\n",
+    "\n",
+    "I performed One-Hot Encoding of my mostly categorical data set to prep it for Random Forest, which will help glean important features for modeling.  The correlations gathered from the one hot encode were consistant with what I say through my CramersV correlation.  Namely, \"Contract_Month_to_month\", \"OnlineSecurity_No\", \"TechSupport_No\", \"Tenure_group_1-12\", \"InternetService_Fiber Optic\",\"PaymentMethod_Electronic check\", \"OnlineBackup_no\", \"DeviceProtection_no\", \"MonthlyCharges\", \"Paperlessbilling_yes\", \"Dependents_no\", \"SeniorCitizens_yes\", \"Partner_no\", \"StreamingMovies_no\", \"StreamingTV_no\", \"StreamingTV_yes\", \"StreamingMovies_yes\", \"MultipleLines_yes\", \"tenure_group_13-24\", \"PhoneService_yes\", and \"gender_Female\" all had positive correlations to \"Churn.\"\n",
+    " \n",
+    "Lastly, I used a Random Forest to glean important features for modeling.  From the Random Forest, one sees \"Total Charges\", \"Monthly Charges\", \"Contract_month_to_month\", \"Internet_service_fiber optic\", \"TechSupport_No\", and \"PaymentMethod_Electronic check\" as important features to be exploded when modeling."
    ]
   }
  ],
