--- a/notebooks/03-preprocessing_training-etg-initial.ipynb
+++ b/notebooks/03-preprocessing_training-etg-initial.ipynb
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "6a021196-3f38-4797-a521-9211d8c68d17",
    "metadata": {},
    "outputs": [
@@ -810,7 +810,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -833,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "88c902b5-1edd-4396-ab53-bbd3cac089b9",
    "metadata": {},
    "outputs": [
@@ -1037,7 +1037,7 @@
        "4                   0.521891                 0.015330  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1059,7 +1059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "cdd7e3f0-223d-4f55-a5c1-f5ecc1dd1eff",
    "metadata": {},
    "outputs": [
@@ -1084,7 +1084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "id": "068b9bf6-db6b-4c71-87f2-d3282e3b6bca",
    "metadata": {},
    "outputs": [
@@ -1118,18 +1118,18 @@
        "      <th>normalized_tenure</th>\n",
        "      <th>normalized_MonthlyCharges</th>\n",
        "      <th>normalized_TotalCharges</th>\n",
-       "      <th>C_Male</th>\n",
+       "      <th>gender_Male</th>\n",
        "      <th>...</th>\n",
-       "      <th>C_No internet service</th>\n",
-       "      <th>C_1</th>\n",
-       "      <th>C_No internet service</th>\n",
-       "      <th>C_1</th>\n",
-       "      <th>C_No internet service</th>\n",
-       "      <th>C_One year</th>\n",
-       "      <th>C_Two year</th>\n",
-       "      <th>C_Credit card (automatic)</th>\n",
-       "      <th>C_Electronic check</th>\n",
-       "      <th>C_Mailed check</th>\n",
+       "      <th>TechSupport_No internet service</th>\n",
+       "      <th>StreamingTV_1</th>\n",
+       "      <th>StreamingTV_No internet service</th>\n",
+       "      <th>StreamingMovies_1</th>\n",
+       "      <th>StreamingMovies_No internet service</th>\n",
+       "      <th>Contract_One year</th>\n",
+       "      <th>Contract_Two year</th>\n",
+       "      <th>PaymentMethod_Credit card (automatic)</th>\n",
+       "      <th>PaymentMethod_Electronic check</th>\n",
+       "      <th>PaymentMethod_Mailed check</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1273,31 +1273,45 @@
        "3           0.619718                   0.239303                 0.210241   \n",
        "4           0.014085                   0.521891                 0.015330   \n",
        "\n",
-       "   C_Male  ...  C_No internet service  C_1  C_No internet service  C_1  \\\n",
-       "0       0  ...                      0    0                      0    0   \n",
-       "1       1  ...                      0    0                      0    0   \n",
-       "2       1  ...                      0    0                      0    0   \n",
-       "3       1  ...                      0    0                      0    0   \n",
-       "4       0  ...                      0    0                      0    0   \n",
+       "   gender_Male  ...  TechSupport_No internet service  StreamingTV_1  \\\n",
+       "0            0  ...                                0              0   \n",
+       "1            1  ...                                0              0   \n",
+       "2            1  ...                                0              0   \n",
+       "3            1  ...                                0              0   \n",
+       "4            0  ...                                0              0   \n",
        "\n",
-       "   C_No internet service  C_One year  C_Two year  C_Credit card (automatic)  \\\n",
-       "0                      0           0           0                          0   \n",
-       "1                      0           1           0                          0   \n",
-       "2                      0           0           0                          0   \n",
-       "3                      0           1           0                          0   \n",
-       "4                      0           0           0                          0   \n",
+       "   StreamingTV_No internet service  StreamingMovies_1  \\\n",
+       "0                                0                  0   \n",
+       "1                                0                  0   \n",
+       "2                                0                  0   \n",
+       "3                                0                  0   \n",
+       "4                                0                  0   \n",
        "\n",
-       "   C_Electronic check  C_Mailed check  \n",
-       "0                   1               0  \n",
-       "1                   0               1  \n",
-       "2                   0               1  \n",
-       "3                   0               0  \n",
-       "4                   1               0  \n",
+       "   StreamingMovies_No internet service  Contract_One year  Contract_Two year  \\\n",
+       "0                                    0                  0                  0   \n",
+       "1                                    0                  1                  0   \n",
+       "2                                    0                  0                  0   \n",
+       "3                                    0                  1                  0   \n",
+       "4                                    0                  0                  0   \n",
+       "\n",
+       "   PaymentMethod_Credit card (automatic)  PaymentMethod_Electronic check  \\\n",
+       "0                                      0                               1   \n",
+       "1                                      0                               0   \n",
+       "2                                      0                               0   \n",
+       "3                                      0                               0   \n",
+       "4                                      0                               1   \n",
+       "\n",
+       "   PaymentMethod_Mailed check  \n",
+       "0                           0  \n",
+       "1                           1  \n",
+       "2                           1  \n",
+       "3                           0  \n",
+       "4                           0  \n",
        "\n",
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1307,7 +1321,7 @@
     "\n",
     "df_dummies = pd.get_dummies(df, columns = ['gender', 'MultipleLines', 'InternetService', 'OnlineSecurity',\n",
     "       'OnlineBackup', 'DeviceProtection', 'TechSupport', 'StreamingTV',\n",
-    "       'StreamingMovies', 'Contract', 'PaymentMethod'], drop_first=True, prefix = 'C', dtype=int)\n",
+    "       'StreamingMovies', 'Contract', 'PaymentMethod'], drop_first=True, dtype=int)\n",
     "df_dummies.head()"
    ]
   },
@@ -1321,7 +1335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "id": "601483bc-7a87-4fa6-86e1-cbb2f94ddc62",
    "metadata": {},
    "outputs": [
@@ -1331,13 +1345,17 @@
      "text": [
       "Index(['SeniorCitizen', 'Partner', 'Dependents', 'PhoneService',\n",
       "       'PaperlessBilling', 'Churn', 'normalized_tenure',\n",
-      "       'normalized_MonthlyCharges', 'normalized_TotalCharges', 'C_Male', 'C_1',\n",
-      "       'C_No phone service', 'C_DSL', 'C_Fiber optic', 'C_1',\n",
-      "       'C_No internet service', 'C_1', 'C_No internet service', 'C_1',\n",
-      "       'C_No internet service', 'C_1', 'C_No internet service', 'C_1',\n",
-      "       'C_No internet service', 'C_1', 'C_No internet service', 'C_One year',\n",
-      "       'C_Two year', 'C_Credit card (automatic)', 'C_Electronic check',\n",
-      "       'C_Mailed check'],\n",
+      "       'normalized_MonthlyCharges', 'normalized_TotalCharges', 'gender_Male',\n",
+      "       'MultipleLines_1', 'MultipleLines_No phone service',\n",
+      "       'InternetService_DSL', 'InternetService_Fiber optic',\n",
+      "       'OnlineSecurity_1', 'OnlineSecurity_No internet service',\n",
+      "       'OnlineBackup_1', 'OnlineBackup_No internet service',\n",
+      "       'DeviceProtection_1', 'DeviceProtection_No internet service',\n",
+      "       'TechSupport_1', 'TechSupport_No internet service', 'StreamingTV_1',\n",
+      "       'StreamingTV_No internet service', 'StreamingMovies_1',\n",
+      "       'StreamingMovies_No internet service', 'Contract_One year',\n",
+      "       'Contract_Two year', 'PaymentMethod_Credit card (automatic)',\n",
+      "       'PaymentMethod_Electronic check', 'PaymentMethod_Mailed check'],\n",
       "      dtype='object')\n"
      ]
     }
@@ -1349,22 +1367,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "id": "e383cb1f-5fd7-4056-833b-e031efa0f55b",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Train-Test Split (Cont) defining X and y('Churn')\n",
+    "#Stratifying Y variable to ensure same proportion of classes to original dataset. \n",
+    "#This is particularly useful when dealing with imbalanced datasets\n",
     "\n",
     "X = df_dummies[['SeniorCitizen', 'Partner', 'Dependents', 'PhoneService',\n",
     "       'PaperlessBilling', 'normalized_tenure',\n",
-    "       'normalized_MonthlyCharges', 'normalized_TotalCharges', 'C_Male', 'C_1',\n",
-    "       'C_No phone service', 'C_DSL', 'C_Fiber optic', 'C_1',\n",
-    "       'C_No internet service', 'C_1', 'C_No internet service', 'C_1',\n",
-    "       'C_No internet service', 'C_1', 'C_No internet service', 'C_1',\n",
-    "       'C_No internet service', 'C_1', 'C_No internet service', 'C_One year',\n",
-    "       'C_Two year', 'C_Credit card (automatic)', 'C_Electronic check',\n",
-    "       'C_Mailed check']].values\n",
+    "       'normalized_MonthlyCharges', 'normalized_TotalCharges', 'gender_Male',\n",
+    "       'MultipleLines_1', 'MultipleLines_No phone service',\n",
+    "       'InternetService_DSL', 'InternetService_Fiber optic',\n",
+    "       'OnlineSecurity_1', 'OnlineSecurity_No internet service',\n",
+    "       'OnlineBackup_1', 'OnlineBackup_No internet service',\n",
+    "       'DeviceProtection_1', 'DeviceProtection_No internet service',\n",
+    "       'TechSupport_1', 'TechSupport_No internet service', 'StreamingTV_1',\n",
+    "       'StreamingTV_No internet service', 'StreamingMovies_1',\n",
+    "       'StreamingMovies_No internet service', 'Contract_One year',\n",
+    "       'Contract_Two year', 'PaymentMethod_Credit card (automatic)',\n",
+    "       'PaymentMethod_Electronic check', 'PaymentMethod_Mailed check']].values\n",
     "y = df_dummies['Churn'].values\n",
     "\n",
     "X_train, X_test,y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=21, stratify=y)\n"
@@ -1372,7 +1396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "id": "f851f7c2-614d-43c3-a46b-405081e5c546",
    "metadata": {},
    "outputs": [],
