--- a/notebooks/05-etg-modeling.ipynb
+++ b/notebooks/05-etg-modeling.ipynb
@@ -1305,7 +1305,7 @@
    "id": "88a6c837-8c6e-43c4-be06-0c762cad1b57",
    "metadata": {},
    "source": [
-    "From testing different feature sets, one can see that the f1 score is highest with the \"All\" feature set. This means taht all features are important when it comes to modeling.  No features necessarily introduce noies into the model. Moving forward, I will use ALL Featuers for my modeling."
+    "From testing different feature sets, one can see that the f1 score is highest with the \"All\" feature set. This means that all features are important when it comes to modeling.  No features necessarily introduce noise into the model. Moving forward, I will use ALL Featuers for my modeling."
    ]
   },
   {
@@ -2902,8 +2902,7 @@
    "id": "8763ba28-e3f9-4bb0-a92e-2ea7daf207d4",
    "metadata": {},
    "source": [
-    "Overall, the model correctly predicts 80 percent of the samples(Accuracy).  Because my classes are imbalanced, accuracy alone can be misleading.  Thus, the other metrics must be considered.  With regard to class 0 ('No Churn') performance, Precision, Recall and F-1 score all were very strong.  We can conclude that the model is very good at detecting No Churn.  However, the model struggles with class 1 (Churn).\n",
-    "One can see it only identifies %54 of actual class-1 cases.  This is  not surprising since Churn(Class 1) is in the minority class.  Churn recall is the main issue.  The model missed many class-1 instances."
+    "Overall, the model correctly predicts 80 percent of the samples(Accuracy).  Because my classes are imbalanced, accuracy alone can be misleading.  Thus, the other metrics must be considered.  With regard to class 0 ('No Churn') performance, Precision, Recall and F-1 score all were very strong.  We can conclude that the model is very good at detecting No Churn.  "
    ]
   },
   {
@@ -2911,7 +2910,7 @@
    "id": "ef73ebe9-b178-4d50-a350-8a632283cd56",
    "metadata": {},
    "source": [
-    "Thus, the other metrics must be considered.  With regard to class 0 ('No Churn') performance, Precision, Recall and F-1 score all were very strong.  We can conclude that the model is very good at detecting No Churn.  However, the model struggles with class 1 (Churn).\n",
+    "However, the model struggles with class 1 (Churn).\n",
     "One can see it only identifies %54 of actual class-1 cases.  This is  not surprising since Churn(Class 1) is in the minority class.  Churn recall is the main issue.  The model missed many class-1 instances."
    ]
   },
